@@ -7,7 +7,7 @@ common_git_repos:
 
 #common_install_dir: "/home/your_user_dir" ## This can also be set to any root directory you'd like. It just needs permissions.
 common_openshift_dir: /pods/content
-common_connected_cluster: true
+common_connected_cluster: false
 mirror_content_pull_mirror: false
 media_share_webserver: true
 
